...
        iconTextId = "홈"
    ),
    RECOMMENDATIONS(
        route = RecommendationsRoute,
        selectedIcon = Icons.Rounded.AutoAwesome,
        unselectedIcon = Icons.Outlined.AutoAwesomeOutlined,
        iconTextId = "추천"
    ),
    ADD(
        route = AddRecordRoute,
        selectedIcon = Icons.Rounded.AddCircle,
        unselectedIcon = Icons.Outlined.AddCircleOutline,
        iconTextId = "기록"
...
